# ContinualLearning

./: .gitignore  README.md  cifar10.py  metrics.py  metrics_seed0.csv  metrics_seed1.csv  metrics_seed2.csv  pyproject.toml  run_cl_experiment.py  run_cl_experiment_2.py
ContinualLearning/: __init__.py  models.py  replay.py  streams.py
clx_mvp/: __init__.py  compression.py  configs.py  features.py  grasp.py  learner.py  lora.py  metrics.py  replay.py  sgm.py  siesta.py  strategies.py  streams.py
clx_mvp/strategies/: __init__.py  agem.py  base.py  basr.py  er.py  ewc.py  finetune.py  grasp.py  lwf.py  sgm.py  siesta.py
experiments/: demo_quickstart.py  plot_results.py  run_cl_experiment.py  run_er_baseline.py
experiments/results/: cifar10_algo-agem_backend-clx_seed-0.json  cifar10_algo-agem_backend-clx_seed-1.json  cifar10_algo-er_backend-clx_seed-0.json  cifar10_algo-er_backend-clx_seed-1.json  cifar10_algo-er_backend-clx_seed-2.json  cifar10_algo-ewc_backend-clx_seed-0.json  cifar10_algo-ewc_backend-clx_seed-1.json  cifar10_algo-ewc_backend-clx_seed-2.json  cifar10_algo-lwf_backend-clx_seed-0.json  cifar10_algo-lwf_backend-clx_seed-1.json  cifar10_algo-lwf_backend-clx_seed-2.json  cifar10_algo-siesta_backend-clx_seed-0.json
scripts/: demo.py  run_all_cl.sh  run_retry_failing.sh  train_cifar10.py
