[project]
name = "clx_mvp"
version = "0.1.0"
description = "Modern continual learning MVP on Lightning Fabric"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "lightning>=2.3.0",
  "numpy>=1.24.0",
  "matplotlib>=3.8.0",
]

[project.optional-dependencies]
bench = ["wandb>=0.17.0"]
dev = ["pytest>=7.4.0","pytest-cov>=4.1.0","ruff>=0.5.0","mypy>=1.10.0"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["clx_mvp"]

